--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -2,6 +2,15 @@
     .van-tabs--line .van-tabs__wrap {
         display: none !important;
     }
+    .van-coupon-list__close {
+        display: none !important;
+    }
+    .van-coupon-list__list {
+        height: 170px !important;
+    }
+    .van-card {
+        width: 200px !important;
+    }
 }
 
 .home__tab2 {
@@ -10,5 +19,16 @@
     }
     .van-field__body {
         display: none !important;
+    }
+    .van-coupon-list__close {
+        display: none !important;
+    }
+    .van-coupon-list__list {
+        height: 170px !important;
+    }
+    .head {
+        .van-search {
+            width: 300px !important;
+        }
     }
 }
