--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -31,4 +31,10 @@
             width: 300px !important;
         }
     }
+    // .navigation {
+    //     .van-nav-bar__left,
+    //     .van-nav-bar__right {
+    //         font-size: 20px !important;
+    //     }
+    // }
 }
