--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -4,3 +4,19 @@
         width: 100% !important;
     }
 }
+
+.classify {
+    .van-divider {
+        margin: 0 !important;
+    }
+}
+
+// 分类侧边
+.sidebar {
+    .van-sidebar {
+        border: 1px solid gray !important;
+    }
+    .van-sidebar-item {
+        background-color: #8a8585;
+    }
+}
