--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,6 +1,10 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
+.head-person {
+    .van-image__img {
+        height: 88px !important;
+        width: 88px !important;
+    }
+}
+
 .shuffling {
     .van-swipe-item {
         height: 150px !important;
@@ -22,39 +26,37 @@
     .van-sidebar-item {
         background-color: #8a8585;
     }
-=======
->>>>>>> bf9e32488263db49c5eee5b2c6c914c6ff205153
-.home__tab {
-    .van-tabs--line .van-tabs__wrap {
-        display: none !important;
+    .home__tab {
+        .van-tabs--line .van-tabs__wrap {
+            display: none !important;
+        }
+        .van-coupon-list__close {
+            display: none !important;
+        }
+        .van-coupon-list__list {
+            height: 170px !important;
+        }
+        .van-card {
+            width: 200px !important;
+        }
     }
-    .van-coupon-list__close {
-        display: none !important;
-    }
-    .van-coupon-list__list {
-        height: 170px !important;
-    }
-    .van-card {
-        width: 200px !important;
-    }
-}
-
-.home__tab2 {
-    .van-tabs--line .van-tabs__wrap {
-        display: none !important;
-    }
-    .van-field__body {
-        display: none !important;
-    }
-    .van-coupon-list__close {
-        display: none !important;
-    }
-    .van-coupon-list__list {
-        height: 170px !important;
-    }
-    .head {
-        .van-search {
-            width: 300px !important;
+    .home__tab2 {
+        .van-tabs--line .van-tabs__wrap {
+            display: none !important;
+        }
+        .van-field__body {
+            display: none !important;
+        }
+        .van-coupon-list__close {
+            display: none !important;
+        }
+        .van-coupon-list__list {
+            height: 170px !important;
+        }
+        .head {
+            .van-search {
+                width: 300px !important;
+            }
         }
     }
     // .navigation {
@@ -63,8 +65,8 @@
     //         font-size: 20px !important;
     //     }
     // }
-<<<<<<< HEAD
-=======
+}
+
 .shuffling {
     .van-swipe-item {
         height: 150px !important;
@@ -86,8 +88,4 @@
     .van-sidebar-item {
         background-color: #8a8585;
     }
->>>>>>> origin/yangyu
-=======
->>>>>>> 2e5ebc38708571d8b1ed6945ae63f4c2c07a7d66
->>>>>>> bf9e32488263db49c5eee5b2c6c914c6ff205153
 }
