--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -96,3 +96,9 @@
         }
     }
 }
+.top{
+    .top1 van-icon van-icon-scan{
+        width: 20px !important;
+        height: auto !important;
+    }
+}
