--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,9 +2,14 @@
   .select_1 van-dropdown-menu van-hairline--top-bottom{
     flex: 1;
   }
-  .van-dropdown-item__content {
 
+
+
+}
+.top{
+  .top1 van-icon van-icon-scan{
+    width: 40px !important;
+    margin-top: 50px !important;
+    height: auto !important;
   }
-
-
 }
