--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -26,7 +26,7 @@
     .van-sidebar-item {
         background-color: #8a8585;
     }
-    <<<<<<< HEAD .home__tab {
+ .home__tab {
         .van-tabs--line .van-tabs__wrap {
             display: none !important;
         }
@@ -74,11 +74,11 @@
     }
 }
 
-=======.home__tab {
+.home__tab {
     .van-tabs--line .van-tabs__wrap {
         display: none !important;
     }
-    >>>>>>>849b80d75ff96c59dde25f7a940cd0c6298c4263 .van-coupon-list__close {
+    .van-coupon-list__close {
         display: none !important;
     }
     .van-coupon-list__list {
@@ -119,14 +119,14 @@
             width: 100% !important;
         }
     }
-<<<<<<< HEAD
+
 }
 .top{
     .top1 van-icon van-icon-scan{
         width: 20px !important;
         height: auto !important;
     }
-=======
+
     .classify {
         .van-divider {
             margin: 0 !important;
@@ -144,5 +144,4 @@
 }
 
 
->>>>>>> 5fe1246c5753d103a8720ab2dd432396514bf12a
-}
+
