--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -6,10 +6,43 @@
 
 
 }
-.top{
-  .top1 van-icon van-icon-scan{
-    width: 40px !important;
+.top__icon{
+   .van-icon .van-icon-scan{
+    font-size:  80px !important;
     margin-top: 50px !important;
     height: auto !important;
+  }
+}
+.home__tab {
+  .van-tabs--line .van-tabs__wrap {
+    display: none !important;
+  }
+  .van-coupon-list__close {
+    display: none !important;
+  }
+  .van-coupon-list__list {
+    height: 170px !important;
+  }
+  .van-card {
+    width: 200px !important;
+  }
+}
+.home__tab2 {
+  .van-tabs--line .van-tabs__wrap {
+    display: none !important;
+  }
+  .van-field__body {
+    display: none !important;
+  }
+  .van-coupon-list__close {
+    display: none !important;
+  }
+  .van-coupon-list__list {
+    height: 170px !important;
+  }
+  .head {
+    .van-search {
+      width: 300px !important;
+    }
   }
 }
